# GameEngineDesign

./: .gitignore  BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Color.cpp  Color.h  Component.cpp  Component.h  CompositeCollider.cpp  CompositeCollider.h  Constants.h  ConvexCollider.cpp  ConvexCollider.h  D3D11Starter.sln  D3D11Starter.vcxproj  D3D11Starter.vcxproj.filters  Debug.cpp  Debug.h  DebugEntity.cpp  DebugEntity.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  Graphics.cpp  Graphics.h  Input.cpp  Input.h  IntVector.cpp  IntVector.h  Lights.h  Main.cpp  Material.cpp  Material.h  Matrix.cpp  (+63 more)
Assets/Models/: KhaimBook.mtl  KhaimBook.vox
ECSProject/: BuildInstructions.txt  CMakeLists.txt
ECSProject/include/ecs/: ComponentArray.hpp  ComponentManager.hpp  Components.hpp  ECSCoordinator.hpp  EntityManager.hpp  RenderComponent.hpp
ECSProject/src/: Systems.cpp  Systems.hpp  main.cpp
ImGui/: imgui.cpp  imgui_demo.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
Minimal Engine/: .gitignore  CMakeLists.txt  Minimal Engine.sln  README.md  envWindowsExample.cmake
Minimal Engine/Minimal Engine/: Minimal Engine.vcxproj  Vulkan Tutorial.vcxproj.filters  buffer.hpp  camera.cpp  camera.hpp  compile.bat  descriptors.cpp  descriptors.hpp  device.cpp  first_app.cpp  first_app.hpp  frame_info.hpp  game_object.cpp  game_object.hpp  keyboard_movement_controller.cpp  main.cpp  model.cpp  model.hpp  pipeline.cpp  renderer.cpp  renderer.hpp  simple_renderer_system.cpp  simple_renderer_system.hpp  swap_chain.cpp  swap_chain.hpp  utils.hpp  window.cpp  window.hpp
Minimal Engine/shaders/: point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
Minimal Engine/src/: Camera.cpp  Camera.hpp  Descriptors.cpp  Descriptors.hpp  Engine.cpp  Engine.hpp  FirstApp.cpp  FirstApp.hpp  FrameInfo.hpp  Mesh.cpp  (+32 more)
(+94 files in other folders)
